--- a/styles.css
+++ b/styles.css
@@ -9,16 +9,17 @@
 .nav a{
     text-decoration: none;
     border: outset wheat;
-    color: chocolate;
+    color: #9E0E40;
 }
 .nav a:hover{
     color: white;
-    background-color: chocolate;
+    background-color: antiquewhite;
     transition: 0.3s;
 }
 div#content div{
     display: inline-block;
     width: 48%;
+    
 }
 div#content div.right{
     vertical-align: top;
@@ -70,5 +71,20 @@ footer h2{
     padding-right: 100px;
     color: rgb(143, 28, 89);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+div.yes{
+    display: flex;
+    flex-direction: column-reverse;
+    background-color: #9E0E40;
+}
+
+div.yes>div{
+    background-color: antiquewhite;
+    width: 70px;
+    margin: 10px;
+    text-align: center;
+    line-height: 35px;
+    font-size: 20px;
 }
 
